# ai-content-accuracy-checker

./: .gitignore  CITATION.cff  DEMO_COMMANDS.md  README.md  pyproject.toml
demos/: app_streamlit.py
docs/: index.md
examples/: bank_reconcile_tips.md  contractor_1099_rules.md  invoice_payments.md  reconcile_accounts.md  reconcile_accounts_conflict.md  sales_tax_setup.md  tax_1099.md
src/accchk/: __init__.py  check.py  chunk.py  claims.py  cli.py  embed.py  index.py  ingest.py  retrieve.py  utils.py
